# polynomial_boosting

./: .gitignore  CMakeLists.txt  ExampleNotebook.ipynb  README.md  setup.py
.github/workflows/: ctest.yml
benchmarks/: benchmarks.py
include/: linalg.h  seedable_rng.h
include/gradient_boosting/: goss_sampler.h  gradient_boosting.h
include/loss_functions/: loss_function.h  quadratic_loss.h
include/regression_models/: fast_linear_regression.h  linear_regression_model.h  regression_model.h
include/tree/: data_iterator.h  treestump.h
lib/: linalg.cpp  seedable_rng.cpp
lib/gradient_boosting/: goss_sampler.cpp  gradient_boosting.cpp
lib/loss_functions/: quadratic_loss.cpp
lib/regression_models/: fast_linear_regression.cpp  linear_regression_model.cpp
lib/tree/: sorting_data_iterator.cpp  treestump.cpp
tests/: unittest_data_iterators.cpp  unittest_gradient_boosting.cpp  unittest_linalg.cpp  unittest_linear_regression_model.cpp  unittest_quadratic_loss.cpp  unittest_treestump.cpp
